@@ -157,6 +157,7 @@ export("domain.quadrattest")
 export("edge.Ripley")
 export("edge.Trans")
 export("Emark")
+export("ensure.listarg")
 export("envelope")
 export("envelopeArray")
 export("envelopeEngine")
